; ModuleID = '/home/carl/AnghaBench/git/extr_unpack-trees.c_debug_unpack_callback.c'
source_filename = "/home/carl/AnghaBench/git/extr_unpack-trees.c_debug_unpack_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.name_entry = type { i32 }
%struct.traverse_info = type { i32 }

@.str = private unnamed_addr constant [40 x i8] c"* unpack mask %lu, dirmask %lu, cnt %d \00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i64, i64, %struct.name_entry*, %struct.traverse_info*)* @debug_unpack_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @debug_unpack_callback(i32 %0, i64 %1, i64 %2, %struct.name_entry* %3, %struct.traverse_info* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.name_entry*, align 8
  %10 = alloca %struct.traverse_info*, align 8
  %11 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store %struct.name_entry* %3, %struct.name_entry** %9, align 8
  store %struct.traverse_info* %4, %struct.traverse_info** %10, align 8
  %12 = load i64, i64* %7, align 8
  %13 = load i64, i64* %8, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @printf(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0), i64 %12, i64 %13, i32 %14)
  %16 = load %struct.traverse_info*, %struct.traverse_info** %10, align 8
  %17 = call i32 @debug_path(%struct.traverse_info* %16)
  %18 = call i32 @putchar(i8 signext 10)
  store i32 0, i32* %11, align 4
  br label %19

19:                                               ; preds = %30, %5
  %20 = load i32, i32* %11, align 4
  %21 = load i32, i32* %6, align 4
  %22 = icmp slt i32 %20, %21
  br i1 %22, label %23, label %33

23:                                               ; preds = %19
  %24 = load i32, i32* %11, align 4
  %25 = load %struct.name_entry*, %struct.name_entry** %9, align 8
  %26 = load i32, i32* %11, align 4
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds %struct.name_entry, %struct.name_entry* %25, i64 %27
  %29 = call i32 @debug_name_entry(i32 %24, %struct.name_entry* %28)
  br label %30

30:                                               ; preds = %23
  %31 = load i32, i32* %11, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %11, align 4
  br label %19

33:                                               ; preds = %19
  ret void
}

declare dso_local i32 @printf(i8*, i64, i64, i32) #1

declare dso_local i32 @debug_path(%struct.traverse_info*) #1

declare dso_local i32 @putchar(i8 signext) #1

declare dso_local i32 @debug_name_entry(i32, %struct.name_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
